@@ -1,19 +1,18 @@
 package org.hypergraphql.config.schema;
 
 import graphql.schema.GraphQLOutputType;
-
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 import static graphql.Scalars.GraphQLBoolean;
 import static graphql.Scalars.GraphQLID;
 import static graphql.Scalars.GraphQLInt;
 import static graphql.Scalars.GraphQLString;
+import static org.hypergraphql.util.HGQLConstants.ID;
+import static org.hypergraphql.util.HGQLConstants.TYPE;
 
-public class HGQLVocabulary {
+public abstract class HGQLVocabulary {
 
-    public static final String HGQL_PREFIX= "hgql:";
+    public static final String HGQL_PREFIX = "hgql:";
     public static final String HGQL_SCHEMA_PREFIX = "hgql-schema:";
     public static final String HGQL_NAMESPACE = "http://hypergraphql.org/";
     public static final String HGQL_SCHEMA_NAMESPACE = HGQL_NAMESPACE + "schema/";
@@ -22,8 +21,8 @@ public class HGQLVocabulary {
     public static final String HGQL_OBJECT_TYPE = HGQL_NAMESPACE + "ObjectType";
     public static final String HGQL_SCALAR_TYPE = HGQL_NAMESPACE + "ScalarType";
     public static final String HGQL_STRING = HGQL_NAMESPACE + "String";
-    public static final String HGQL_Int = HGQL_NAMESPACE + "Int";
-    public static final String HGQL_Boolean = HGQL_NAMESPACE + "Boolean";
+    public static final String HGQL_INT = HGQL_NAMESPACE + "Int";
+    public static final String HGQL_BOOLEAN = HGQL_NAMESPACE + "Boolean";
     public static final String HGQL_ID = HGQL_NAMESPACE + "ID";
     public static final String HGQL_LIST_TYPE = HGQL_NAMESPACE + "ListType";
     public static final String HGQL_NON_NULL_TYPE = HGQL_NAMESPACE + "NonNullType";
@@ -44,27 +43,25 @@ public class HGQLVocabulary {
     public static final String HGQL_OF_TYPE = HGQL_NAMESPACE + "ofType";
     public static final String HGQL_KIND = HGQL_NAMESPACE + "kind";
 
-
     public static final String RDF_TYPE = "http://www.w3.org/1999/02/22-rdf-syntax-ns#type";
 
-
-    public static final Map<String, String> SCALAR_TYPES = Collections.unmodifiableMap(new HashMap<String, String>() {{
-        put("String", HGQL_STRING);
-        put("Int", HGQL_Int);
-        put("Boolean", HGQL_Boolean);
-        put("ID", HGQL_ID);
-    }});
+    public static final Map<String, String> SCALAR_TYPES = Map.of(
+        "String", HGQL_STRING,
+        "Int", HGQL_INT,
+        "Boolean", HGQL_BOOLEAN,
+        "ID", HGQL_ID
+    );
 
     public static final Map<String, GraphQLOutputType> SCALAR_TYPES_TO_GRAPHQL_OUTPUT =
-            Collections.unmodifiableMap(new HashMap<String, GraphQLOutputType>() {{
-        put(HGQL_STRING, GraphQLString);
-        put(HGQL_Int, GraphQLInt);
-        put(HGQL_Boolean, GraphQLBoolean);
-        put(HGQL_ID, GraphQLID);
-    }});
+            Map.of(
+                HGQL_STRING, GraphQLString,
+                HGQL_INT, GraphQLInt,
+                HGQL_BOOLEAN, GraphQLBoolean,
+                HGQL_ID, GraphQLID
+            );
 
-    public static final Map<String, String> JSONLD = Collections.unmodifiableMap(new HashMap<String, String>() {{
-        put("_id", "@id");
-        put("_type", "@type");
-    }});
+    public static final Map<String, String> JSONLD = Map.of(
+        ID, "@id",
+        TYPE, "@type"
+    );
 }
